# aura

./: .gitignore  AURA_MASTER_AUDIT.md  AURA_REPAIR_REPORT.md  AURA_REVERSE_ENGINEERING_AUDIT.md  PROJECT_STATUS.md  README.md  audit_all.py  audit_pipeline_fix_report.md  scientific_audit.md  test_image.py  vision_audit.md
aura/: README.md  aura_cli.py  pyproject.toml  requirements.txt  run.bat  run.sh  run_ablation.py
aura/artifacts/: RETRAIN_V2_RESULTS.txt  RETRAIN_V3_RESULTS.txt  benchmark.json  conformal_mondrian.npy  fusion_ablation.json  fusion_classical.npz  fusion_ensemble.npz  fusion_learnable.npz  fusion_quantum.npz  history.csv  inference_log.jsonl  kappa_crosscheck.json  kappa_crosscheck.superseded-20260721.bak.json  labeler_validation.json  labeler_validation.superseded-20260721.bak.json  registry.json  retrain_v2_train.err  retrain_v3_train.err  safety.npz  safety.synthetic-ood.bak.npz  scheduler.pt  vision.npz  vision_calibration_perfinding.json  vision_calibration_retrain_v2.json  vision_calibration_retrain_v3.json  vision_cnn_train.json  vision_serving_calibration.json  vision_serving_calibration.n16.bak.json
aura/common/: __init__.py  anatomy.py  config.py  eventbus.py  mathx.py
aura/docs/: ARCHITECTURE.md  ARCHITECTURE_REFACTOR.md  DEPLOYMENT.md  EVALUATION_REPORT.md  FINAL_DELIVERABLE.md  INTEGRATION_REPORT.md  MIMIC_VERIFICATION_REPORT.md  MODEL_CARD.md  PERFORMANCE_REPORT.md  PRODUCT_V2.md  QUANTUM_STACK.md
aura/gateway/: __init__.py  app.py  pipeline.py  security.py  seed.py  storage.py
aura/mimic/: __init__.py  cleaning.py  config.py  (+16 more)
(+242 files in other folders)
